Finalizando ex01 da aula 1

--- a/alura/html-css/exercicios/1.1-documentacao-html/ex01.html
+++ b/alura/html-css/exercicios/1.1-documentacao-html/ex01.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Exercicio 1</title>
+        <title>Curso</title>
+        <meta charset="UTF-8">
     </head>
     <body>
-        
+        <h1>Sobre o Curso</h1>
+        <p>Este curso é sobre HTML e CSS.</p>
     </body>
 </html>
