Finalizando Exercicio 2 da aula 1

--- a/alura/html-css/exercicios/1.1-documentacao-html/ex02/index.html
+++ b/alura/html-css/exercicios/1.1-documentacao-html/ex02/index.html
@@ -11,5 +11,11 @@
         <h2>Explorando ideias e aprendizados</h2>
         <p>Este é um espaço onde compartilho meus estudos, projetos e experiências na jornada de desenvolvimento web.</p>
         <img src="minhafoto.jpg" alt="Uma foto minha">
+	<h1>Minhas Linguagens</h1>
+	<ul>
+		<li>Python</li>
+		<li>Java</li>
+		<li>MySQL</li>
+	</ul>
     </body>
 </html>
