Modificando index.html e adicionando itens

--- a/alura/html-css/portfolio/index.html
+++ b/alura/html-css/portfolio/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+	<meta charset="UTF-8>
+	<meta http-equiv="X-UA-Compatible" content="Chrome">
+	<meta name="viewport" content="wigth=device-width, initial-scale=1.0">
+	<title>Portfolio</title>
 </head>
 <body>
-    <h1>Isso é um título</h1>
-    <p>Isso é um parágrafo</p>
-    <img src="html.png" alt="logo do HTML 5">
-    
+	<header></header>
+	<main>
+		<h1>Nesta página Web, estarei aprendendo a desenvolver <strong>um Front-end de qualidade!</strong></h1>
+		<p>Olá! Sou Hederson Rigonatti, estudante do Curso Alura, e estou aprendendo HTML-CSS, Python e futuramente Java. Pretendo seguir uma carreira desenvolvendo IA e liderando uma equipe. Vamos conversar?</p>
+		<a href="https://instagram.com/hedersondev">Instagram</a>
+		<a href="https://github.com/Hedersonn">GitHub</a>
+	</main>
+	<footer></footer>
 </body>
-</html>
+</html>    
