Atualizando index.html e finalizando aula02

--- a/alura/html-css/portfolio/index.html
+++ b/alura/html-css/portfolio/index.html
@@ -13,6 +13,7 @@
 		<p>Olá! Sou Hederson Rigonatti, estudante do Curso Alura, e estou aprendendo HTML-CSS, Python e futuramente Java. Pretendo seguir uma carreira desenvolvendo IA e liderando uma equipe. Vamos conversar?</p>
 		<a href="https://instagram.com/hedersondev">Instagram</a>
 		<a href="https://github.com/Hedersonn">GitHub</a>
+		<img src="minhafoto.jpg" alt="Uma foto minha">
 	</main>
 	<footer></footer>
 </body>
