--- a/alura/html-css/portfolio/index.html
+++ b/alura/html-css/portfolio/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="Chrome">
 	<meta name="viewport" content="wigth=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header></header>
