Adicionando cor a tag strong

--- a/alura/html-css/portfolio/index.html
+++ b/alura/html-css/portfolio/index.html
@@ -11,7 +11,7 @@
 	<header></header>
 	<main>
 		<h1>Nesta página Web, estarei aprendendo a desenvolver <strong>um Front-end de qualidade!</strong></h1>
-		<p>Olá! Sou Hederson Rigonatti, estudante do Curso Alura, e estou aprendendo HTML-CSS, Python e futuramente Java. Pretendo seguir uma carreira desenvolvendo IA e liderando uma equipe. Vamos conversar?</p>
+		<p>Olá! Sou Hederson Rigonatti, estudante do Curso Alura, e estou aprendendo <strong>HTML-CSS, Python e futuramente Java</strong>. Pretendo seguir uma carreira desenvolvendo IA e liderando uma equipe. Vamos conversar?</p>
 		<a href="https://instagram.com/hedersondev">Instagram</a>
 		<a href="https://github.com/Hedersonn">GitHub</a>
 		<img src="minhafoto.jpg" alt="Uma foto minha">
